[package]
name = "lexue-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.3", features = ["derive"] }
reqwest = { version = "0.11", features = ["multipart", "rustls-tls"] }
webbrowser = "0.6"
keyring = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] } # optional
