[package]
name = "lexue-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
dirs = "6.0.0"
tokio = { version = "1.36", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["rustls-tls"] }
scraper = "0.14"
futures = "0.3.21"
percent-encoding = "2"
toml="0.9.8"
serde="1.0"
webbrowser = "1.0.6"
urlencoding = "2.1.3"
tiny_http = "0.12.0"
url = "2.5.7"
cookie = "0.18.1"
